tests/ui/lowering/issue-96847.stderr
error[E0522]: definition of an unknown lang item: `foo`
  --> $DIR/issue-96847.rs:11:9
   |
LL |         #![lang="foo"]
   |         ^^^^^^^^^^^^^^ definition of unknown lang item `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0522`.
